Fixed overlapping search result box on front page
Wrike: https://www.wrike.com/open.htm?id=88137201

--- a/app/components/hero/hero-search/hero-search.component.less
+++ b/app/components/hero/hero-search/hero-search.component.less
@@ -61,4 +61,8 @@
     position: relative;
     margin: 0 auto;
     width: 500px;
+    
+    form {
+      overflow: hidden;
+    }
   }
